🚧  Set margin to .global-footer to prevent it from being overlapped by .order-cta

--- a/styles/layouts/_global-footer.scss
+++ b/styles/layouts/_global-footer.scss
@@ -4,6 +4,7 @@
   //   left: 0;
   //   width: 100%; 김버그님은 하단에 구지 안붙여줌
   padding: 32px 0 40px;
+  margin-bottom: $order-cta-height;
   background-color: $background;
 
   &-title {
@@ -51,6 +52,8 @@
   }
 
   @include responsive(D) {
+    margin-bottom: 0;
+
     &-title {
       @include text-style(14);
     }
